Congrats to Tapity added RSS feed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <title>{{ page.title }}</title>
+  <link href="http://feeds.feedburner.com/AirdropApps" rel="alternate" title="Airdrop Apps Orbiting HQ" type="application/atom+xml" />
+  
   <link rel="stylesheet" type="text/css" href="/css/style.css" />
   <!--[if IE]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
